# OFP

./: CMakeLists.txt
src/: grid_potts_example.cpp  grid_potts_example.h  main.cpp  main2.cpp
